--- a/mugairyu/public/katas/index.html
+++ b/mugairyu/public/katas/index.html
@@ -1,6 +1,8 @@
 
 
-<h3 id="座技-zagi-katas-à-genous">座技 Zagi (katas à genous)</h3>
+<h1 id="les-katas">Les Katas</h1>
+
+<h2 id="座技-zagi-katas-à-genous">座技 Zagi (katas à genous)</h2>
 
 <table>
 <thead>
@@ -40,7 +42,7 @@
 
 <hr />
 
-<h3 id="立ち技-tachiwaza-katas-debouts">立ち技 Tachiwaza (katas debouts)</h3>
+<h2 id="立ち技-tachiwaza-katas-debouts">立ち技 Tachiwaza (katas debouts)</h2>
 
 <table>
 <thead>
@@ -80,7 +82,7 @@
 
 <hr />
 
-<h3 id="剣術-kenjutsu">剣術 KENJUTSU</h3>
+<h2 id="剣術-kenjutsu">剣術 Kenjutsu</h2>
 
 <table>
 <thead>
