--- a/mugairyu/public/les-dojos/index.html
+++ b/mugairyu/public/les-dojos/index.html
@@ -1,6 +1,12 @@
 
 
+<h1 id="les-dojos">Les Dojos</h1>
+
+<h2 id="sur-paris">Sur paris</h2>
+
 <h3 id="paris-mugaikai">Paris mugaikai</h3>
+
+<p><a href="https://parismugaikai.jimdo.com/">https://parismugaikai.jimdo.com/</a></p>
 
 <p><img src="/images/salle-dojo-les-halles1.jpg" alt="Dojo Les Halles" /></p>
 
@@ -19,16 +25,14 @@ Porte du Jour- 4 place de la Rotonde (niveau-3, forum)<br />
 
 <li><p>M. Masayochi Sato 5ème dan / Shidôin (Fondateur Mugai ryu France)</p></li>
 
-<li><p>M. Moscato Antonio 4ème dan / Shidôin</p>
-
-<h4 id="site-web">Site web</h4>
-
-<p><a href="https://parismugaikai.jimdo.com/">https://parismugaikai.jimdo.com/</a></p></li>
+<li><p>M. Antonio Moscato 4ème dan / Shidôin</p></li>
 </ul>
 
 <hr />
 
 <h3 id="kazuki-dojo">Kazuki dojo</h3>
+
+<p><a href="https://mugairyufrance.jimdo.com/mugai-ryu/">https://mugairyufrance.jimdo.com/mugai-ryu/</a></p>
 
 <p><img src="/images/salle-dojo-shiseikan1.jpg" alt="Dojo Shiseikan" /></p>
 
@@ -52,10 +56,6 @@ Métros : ligne 12 Volontaires ou Ligne 6 Sèvres-Lecourbe</p>
 
 <li><p>M. Dino Perrone 4ème dan / Shidôin</p></li>
 
-<li><p>Mlle Linh Thiers 3ème dan / Shidôin</p>
-
-<h4 id="site-web-1">Site web</h4>
-
-<p><a href="https://mugairyufrance.jimdo.com/mugai-ryu/">https://mugairyufrance.jimdo.com/mugai-ryu/</a></p></li>
+<li><p>Mlle Linh Thiers 3ème dan / Shidôin</p></li>
 </ul>
 
