--- a/mugairyu/public/media/index.html
+++ b/mugairyu/public/media/index.html
@@ -1,6 +1,8 @@
 
 
-<h3 id="wakizashi-no-kata">Wakizashi no kata</h3>
+<h1 id="vidéos">Vidéos</h1>
+
+<h2 id="wakizashi-no-kata">Wakizashi no kata</h2>
 
 
 <div style="position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden;">
@@ -10,7 +12,7 @@
 
 <hr />
 
-<h3 id="goyô-tôshi-geiko">Goyô tôshi geiko</h3>
+<h2 id="goyô-tôshi-geiko">Goyô tôshi geiko</h2>
 
 
 <div style="position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden;">
@@ -18,7 +20,7 @@
  </div>
 
 
-<h3 id="katate-soe-giri">Katate soe giri</h3>
+<h2 id="katate-soe-giri">Katate soe giri</h2>
 
 
 <div style="position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden;">
@@ -26,7 +28,7 @@
  </div>
 
 
-<h3 id="goyô-tôshi-geiko-1">Goyô tôshi geiko</h3>
+<h2 id="goyô-tôshi-geiko-1">Goyô tôshi geiko</h2>
 
 
 <div style="position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden;">
@@ -34,7 +36,7 @@
  </div>
 
 
-<h3 id="goô-tôshi-geiko">Goô tôshi geiko</h3>
+<h2 id="goô-tôshi-geiko">Goô tôshi geiko</h2>
 
 
 <div style="position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden;">
@@ -42,7 +44,7 @@
  </div>
 
 
-<h3 id="maegoshi">Maegoshi</h3>
+<h2 id="maegoshi">Maegoshi</h2>
 
 
 <div style="position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden;">
@@ -50,7 +52,7 @@
  </div>
 
 
-<h3 id="extrait-taikai-2017">Extrait Taikai 2017</h3>
+<h2 id="extrait-taikai-2017">Extrait Taikai 2017</h2>
 
 
 <div style="position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden;">
