--- a/mugairyu/public/mugairyu/index.html
+++ b/mugairyu/public/mugairyu/index.html
@@ -3,5 +3,6 @@
 <li><a href="#origine-et-histoire">Origine et Histoire</a></li>
 <li><a href="#sokes">Les Sōkes</a></li>
 <li><a href="#katas">Les Katas</a></li>
+<li><a href="#lexique">Lexique</a></li>
 </ul>
 
