--- a/mugairyu/public/siege-de-tokyo/index.html
+++ b/mugairyu/public/siege-de-tokyo/index.html
@@ -1,6 +1,8 @@
 
 
-<h3 id="musashinokuni-mugaikai">Musashinokuni Mugaikai</h3>
+<h1 id="le-siège-de-tokyo">Le siège de Tokyo</h1>
+
+<h2 id="musashinokuni-mugaikai">Musashinokuni Mugaikai</h2>
 
 <p>武蔵国無外会 - Maître Yasufumi Sudo</p>
 
