--- a/mugairyu/public/sokes/index.html
+++ b/mugairyu/public/sokes/index.html
@@ -1,6 +1,8 @@
 
 
-<h3 id="les-trois-derniers-sōkes">Les trois derniers Sōkes</h3>
+<h1 id="les-sōkes-du-mugai-ryu">Les Sōkes du Mugai ryu</h1>
+
+<h2 id="les-trois-derniers-sōkes">Les trois derniers Sōkes</h2>
 
 <p>Kyutaro Koun TAKAHASHI</p>
 
@@ -14,7 +16,7 @@
 
 <p><img src="images/sokes/Misakazu-Ryuo-KONISHI-soke.png" alt="Misakazu Ryuo KONISHI" /></p>
 
-<h3 id="généalogie-des-sōkes-du-mugai-ryu">Généalogie des sōkes du Mugai ryu</h3>
+<h2 id="généalogie-des-sōkes-du-mugai-ryu">Généalogie des sōkes du Mugai ryu</h2>
 
 
 <figure class="image main">
