--- a/mugairyu/public/taikai/index.html
+++ b/mugairyu/public/taikai/index.html
@@ -1,8 +1,10 @@
 
 
-<p><a href="#6ème Kokusai Taikai">6ème Kokusai Taikai</a></p>
+<h1 id="les-taikai">Les Taikai</h1>
 
-<h3 id="6ème-kokusai-taikai">6ème Kokusai Taikai</h3>
+<p>Compétitions international</p>
+
+<h2 id="6ème-kokusai-taikai">6ème Kokusai Taikai</h2>
 
 <table>
 <thead>
@@ -25,9 +27,9 @@
 </tbody>
 </table>
 
-<p>Frais :4,000 yen(programme, déjeuner,souvenir incluses)</p>
+<p>Frais :4,000 yen(programme, déjeuner,souvenir inclus)</p>
 
-<h4 id="programme-de-la-compétition">Programme de la compétition</h4>
+<h3 id="programme-de-la-compétition">Programme de la compétition</h3>
 
 <ul>
 <li>Enbu par Sensei</li>
@@ -36,11 +38,11 @@
 <li>Match spécial par mineur</li>
 </ul>
 
-<h4 id="tarif-hotel">tarif hotel</h4>
+<h3 id="tarif-hotel">tarif hotel</h3>
 
 <p>17,500 yen</p>
 
-<h4 id="japanese-version">Japanese version</h4>
+<h2 id="japanese-version">Japanese version</h2>
 
 <p>大会詳細<br />
 第６回中川無外真伝無外流居合兵道・国際大会<br />
